# feed-cli

./: .env.example  .gitignore  Dockerfile  README.md  aggregator.py  cli.py  config.py  db.py  decorators.py  hn_jobs.py  init.sql  jobs.sql  logger.py  main.py  pyproject.toml  requirements.txt  unit_tests.py  utils.py
k8s/: cli-deployment.yaml  jobs-configmap.yaml  postgres-deployment.yaml  postgres-init-sql.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml
